# Kvasir

./: .gitignore  CMakeLists.txt  HelloWorld.txt  Home  Home.pub  Idk.py  Main.py  Output.txt  README.md  Utilities.py  add_missing_data.py  groups  package-lock.json  package.json  project.config  requirements.txt  test.txt  test_interpolated.csv  util.py
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/navigation/: mobile_navigation.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Github Automation/: GerritPull.py  MergeGerritToGithub.py
Kvasir/: CMakeLists.txt  Kvasir.cpp  Kvasir.h  angular.json  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  tsconfig.json
Kvasir/Components/: CameraConnection.cpp  CameraConnection.h  CameraControl.cpp  CameraControl.h  GraphicOverlay.cpp  GraphicOverlay.h  Model.cpp  Model.h
Kvasir/Components/FaceDetection/: FaceDetection.cpp  FaceDetection.h
Kvasir/Components/FaceStorage/: FaceStorage.cpp  FaceStorage.h
Kvasir/Components/MotionBasedRecorder/: MotionBasedRecorder.cpp  MotionBasedRecorder.h
Kvasir/Components/NotificationQueue/: NotificationQueue.cpp  NotificationQueue.h
Kvasir/Components/Utils/: Utils.cpp  Utils.h
Kvasir/Components/WebserverCommunication/: S3Communication.cpp  S3Communication.h  StreamService.cpp  StreamService.h
Kvasir/Scripts/: build-dependencies.py  download-dependencies.py
Kvasir/android/: capacitor.settings.gradle
Kvasir/android/app/: capacitor.build.gradle
Kvasir/android/app/src/main/res/values/: strings.xml
Kvasir/src/: main.ts
Kvasir/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  auth.guard.ts
Kvasir/src/app/barred-list/: barred-list-routing.module.ts  barred-list.module.ts  barred-list.page.html  barred-list.page.scss  barred-list.page.spec.ts  barred-list.page.ts
Kvasir/src/app/components/tabs/: tabs.component.html  tabs.component.ts
Kvasir/src/app/components/toolbar/: toolbar.component.html  toolbar.component.scss  toolbar.component.ts
Kvasir/src/app/database/: database.module.ts  database.page.html  database.page.scss  database.page.spec.ts  database.page.ts
Kvasir/src/app/home/: home.page.html  home.page.ts
Kvasir/src/app/image-viewer/: image-viewer-routing.module.ts  image-viewer.module.ts  image-viewer.page.html  image-viewer.page.scss  image-viewer.page.ts
Kvasir/src/app/livestream/: livestream-routing.module.ts  livestream.module.ts  livestream.page.html  livestream.page.scss  livestream.page.spec.ts  livestream.page.ts
Kvasir/src/app/login/: login.page.html  login.page.scss  login.page.ts
Kvasir/src/app/management/: management-routing.module.ts  management.module.ts  management.page.html  management.page.spec.ts  management.page.ts
Kvasir/src/app/person/: person.ts
Kvasir/src/app/serivces/kinesis/: kinesis.service.spec.ts  kinesis.service.ts
Kvasir/src/app/services/: notifications.service.ts
Kvasir/src/app/video-player/: video-player-routing.module.ts  video-player.module.ts  video-player.page.html  video-player.page.scss  video-player.page.spec.ts  video-player.page.ts
Kvasir/src/assets/models/: tiny_face_detector_model-weights_manifest.json
Kvasir/src/environments/: environment.prod.ts  environment.ts  environment_example.ts
ModelTraining/: Combined.py  Image.py  LPRequest.py  LicensePlateFULL.py  LogicPlan  ModelTraining.ipynb  OCR-Stuff.py  S3Connect.py  Test.py  VechicleDetect.py  combined_vehicle_data.json
(+12 files in other folders)
